syntax = "proto3";

option go_package = "worker_proto";
option csharp_namespace = "Spectator.Protos.Worker";

package worker_proto;

service Worker {
    rpc Ping (EmptyRequest) returns (Health);
    rpc FunFact (Member) returns (FunFactResponse);
    rpc GenerateFiles (Member) returns (EmptyResponse);
    rpc ListFiles (Member) returns (FilesList);
    rpc ListMultipleFiles (Members) returns (FilesLists);
}

message EmptyRequest {}

message EmptyResponse {}

message Health {
    string status = 1;
}

message Member {
    string request_id = 1;
    string session_id = 2;
}

message Members {
    string request_id = 1;
    repeated string session_id = 2;
}

message FunFactResponse {
    int64 words_per_minute = 1;
    double deletion_rate = 2;
    int64 submission_attempts = 3;
}

message FilesList {
    string session_id = 1;
    repeated File files = 2;
}

message FilesLists {
    repeated FilesList files_list = 1;
}

message File {
    string session_id = 1;
    string student_number = 2;
    string file_url_json = 3;
    string file_url_csv = 4;
}
